This file documents the revision history for the Monitoring Webinterface Thruk.

1.34     not yet released
          - Bug Fixes
            - fixed 'All types' link not working all the time

1.32     Sat Jun  2 18:46:38 CEST 2012
          - added recurring downtimes
          - added in_check|notification_period to extinfo
          - added sort by status information
          - added reschedule 'now' link to extinfo page
          - added mongodb support (experimental)
            - added logcache based on mongodb (mixed mode)
          - added long plugin output to excel export
          - added child options to downtimes (Jason Lempka)
          - reporting:
            - added report editor
            - added cron editor for scheduling reports
            - report fileextension is now .rpt
          - Bug Fixes
            - fixed mobile interface (jquery version was too old)
            - fixed javascript error on comments/downtimes page
            - fixed deleting all downtimes from extinfo page
            - fixed removing comments/downtimes from extinfo page

1.30     Sun May  6 19:37:59 CEST 2012
          - added sla reporting
            - implemented 'last12months'
            - implemented months breakdown
          - updated jquery to 1.7.2
          - do not reenable ssi files on pkg updates
          - Bug Fixes
            - fixed adding bookmarks
            - fixed selecting multiple filter
            - fixed statusmap js errors

1.28     Sat Apr 28 18:53:49 CEST 2012
          - added support for display_name
          - added filter for custom variables
          - show host/servicegroups only if contact has permission for at least on host/service
          - add new url parameter 'minimal' for hiding everything except the data (Pierre Mavro)
          - added documentation about common CGI parameters
          - added init script
          - added event details to logs excel export