@@ -9774,6 +9774,14 @@ will wait this amount and display the result immediately.</p></div>
 <div class="content">
 <pre><tt>wait_timeout = 10</tt></pre>
 </div></div>
+<h4 id="_mobile_agent">mobile_agent</h4>
+<div class="paragraph"><p>Specify user agents which will be redirected to the mobile plugin (if
+enabled).</p></div>
+<div class="paragraph"><p>ex.:</p></div>
+<div class="literalblock">
+<div class="content">
+<pre><tt>mobile_agent=iPhone,Android,IEMobile</tt></pre>
+</div></div>
 <h4 id="_no_external_job_forks">no_external_job_forks</h4>
 <div class="paragraph"><p>Normally reports will be generated in an external process to avoid
 timeouts on long running reports. Use this switch to turn external
@@ -10570,7 +10578,7 @@ of your monitoring core configuration.</p></div>
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2012-06-05 22:27:35 CEST
+Last updated 2012-06-10 15:13:00 CEST
 </div>
 </div>
 </body>
