@@ -372,6 +372,11 @@ use_wait_feature = 1
 # will wait this amount and display the result immediately.
 wait_timeout = 10
 
+#####################################
+# mobile useragents
+# specify user agents which will be redirected to the mobile plugin (if enabled)
+mobile_agent=iPhone,Android,IEMobile
+
 ######################################
 # BACKENDS
 ######################################
