@@ -1,6 +1,7 @@
 This file documents the revision history for the Monitoring Webinterface Thruk.
 
 1.34     not yet released
+          - added config item to specify mobile agents
           - Bug Fixes
             - fixed 'All types' link not working all the time
 
